Bug 31377 - [libabigail] abidiff does not handle some flex array conversion
Summary: [libabigail] abidiff does not handle some flex array conversion
Status: RESOLVED FIXED
Alias: None
Product: libabigail
Classification: Unclassified
Component: default (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Dodji Seketeli
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-13 13:11 UTC by David Marchand
Modified: 2024-02-18 12:24 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:


Attachments
bz31377.tar.xz (1.05 MB, application/x-xz)
2024-02-13 13:12 UTC, David Marchand
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Marchand 2024-02-13 13:11:35 UTC
Following a tentative change submitted by a DPDK contributor, like

-	__extension__ uint8_t action_data[0];
+	uint8_t action_data[];

our ABI check raised a libabigail exception:

  type size hasn't changed
  1 data member change:
    'uint8_t action_data[]' has *some* difference - please report as a bug

So I am following the suggestion, and reporting a bug :-).
Binaries and commandline can be found in the archive attached to this bz.
Comment 1 David Marchand 2024-02-13 13:12:48 UTC
Created attachment 15360 [details]
bz31377.tar.xz
Comment 2 Dodji Seketeli 2024-02-15 12:48:45 UTC
I could reproduce the issue, thanks for reporting this problem and sorry for the inconvenience.

I am looking into it.
Comment 4 David Marchand 2024-02-16 08:04:44 UTC
I tested this PR31377 branch with DPDK binaries and it seems fine.
Thanks for the quick fix.
Comment 5 Dodji Seketeli 2024-02-18 12:24:42 UTC
The fix for this issue has been applied to the mainline branch at https://sourceware.org/git/?p=libabigail.git;a=commit;h=3cc1c3423c89c2cfd9d451ab99b71f3a74b35127 and should be available in either libabigail 2.4.1 (if roll such a release out) or 2.5.


Thank you for reporting this problem and for testing the candidate fix in such a timely manner.